--- a/omegasoft_hr_organizational_units/views/hr_department.xml
+++ b/omegasoft_hr_organizational_units/views/hr_department.xml
@@ -107,10 +107,7 @@
                         </notebook>
                     </sheet>
                     <div class="oe_chatter">
-                        <field
-                            name="message_follower_ids"
-                            groups="base.group_user"
-                        />
+                        <field name="message_follower_ids" groups="base.group_user" />
                         <field name="message_ids" />
                     </div>
                 </form>
