--- a/omegasoft_sale_commissions/views/paid_sales_allocation_views.xml
+++ b/omegasoft_sale_commissions/views/paid_sales_allocation_views.xml
@@ -14,11 +14,7 @@
                 <field name="payment_date" />
                 <field name="invoice_id" optional="hide" />
                 <field name="employee_id" optional="hide" />
-                <field
-                    name="invoice_state"
-                    optional="hide"
-                    string="Invoice state"
-                />
+                <field name="invoice_state" optional="hide" string="Invoice state" />
             </tree>
         </field>
     </record>
