--- a/pways_so_po_consignment/report/consignments_template.xml
+++ b/pways_so_po_consignment/report/consignments_template.xml
@@ -17,9 +17,7 @@
                                 <div class="row">
                                         <div class="col-6">
                                             <span>Vendor name:</span>
-                                            <span
-                                        t-esc="header['vendor_name']"
-                                    /><br />
+                                            <span t-esc="header['vendor_name']" /><br />
                                             <span>Reference Id:</span>
                                             <span
                                         t-esc="header['consignment_name']"
@@ -27,13 +25,11 @@
                                         </div>
                                         <div class="col-6">
                                             <span>Date:</span>
-                                            <span
-                                        t-esc="header['purchase_date']"
-                                    /><br />
+                                            <span t-esc="header['purchase_date']" /><br
+                                    />
                                             <span>Sale Orders:</span>
-                                            <span
-                                        t-esc="header['sale_order_ids']"
-                                    /><br />
+                                            <span t-esc="header['sale_order_ids']" /><br
+                                    />
                                         </div>
                                 </div>
                             </t>
@@ -82,9 +78,7 @@
                                     <div class="col-8">
                                     </div>
                                     <div class="col-4">
-                                        <table
-                                        class="table table-sm table-bordered"
-                                    >
+                                        <table class="table table-sm table-bordered">
                                             <thead>
                                                 <tr>
                                                     <th><strong
@@ -143,16 +137,14 @@
                                             <span>Sale Order:</span>
                                             <span t-esc="rec['name']" /><br />
                                             <span>Date:</span>
-                                            <span
-                                            t-esc="rec['sale'].date_order"
-                                        /><br />
+                                            <span t-esc="rec['sale'].date_order" /><br
+                                        />
                                         </div>
                                         <div class="col-6">
                                             <span>Customers:</span>
                                             <span t-esc="rec['customer']" /><br />
                                             <span>Purchase Order: </span>
-                                            <span t-esc="rec['purchase_id']" /><br
-                                        />
+                                            <span t-esc="rec['purchase_id']" /><br />
                                         </div>
                                     </div>
                                     <table
@@ -186,9 +178,7 @@
                                                     <span t-esc="line.price_unit" />
                                                 </td>
                                                 <td class="text-center">
-                                                    <span
-                                                    t-esc="line.price_subtotal"
-                                                />
+                                                    <span t-esc="line.price_subtotal" />
                                                 </td>
                                             </tr>
                                         </tbody>
