[FIX] Fixed the 'Deprecated "<tree string=..." - [xml-deprecated-tree-attribute]' messages

--- a/l10n_ve_withholding_islr/views/account_withholding_islr.xml
+++ b/l10n_ve_withholding_islr/views/account_withholding_islr.xml
@@ -4,7 +4,7 @@
         <field name="name">account.withholding.islr.view.tree</field>
         <field name="model">account.withholding.islr</field>
         <field name="arch" type="xml">
-            <tree string="Retenciones de islr" create="0" edit="0">
+            <tree create="0" edit="0">
                 <field name="name" />
                 <field name="invoice_id" />
                 <field name="date" />
