--- a/l10n_ve_withholding_iva/views/account_withholding_iva.xml
+++ b/l10n_ve_withholding_iva/views/account_withholding_iva.xml
@@ -4,7 +4,7 @@
         <field name="name">account.withholding.iva.view.tree</field>
         <field name="model">account.withholding.iva</field>
         <field name="arch" type="xml">
-            <tree string="Retenciones de IVA" create="0" edit="0">
+            <tree create="0" edit="0">
                 <field name="name" />
                 <field name="invoice_id" />
                 <field name="date" />
