--- a/omegasoft_hr_employee_disability/views/canapdis.xml
+++ b/omegasoft_hr_employee_disability/views/canapdis.xml
@@ -5,7 +5,7 @@
         <field name="name">canapdis.view.tree</field>
         <field name="model">hr.canapdis</field>
         <field name="arch" type="xml">
-            <tree string="canapdis">
+            <tree>
                 <field name="name" />
                 <field name="date" />
                 <field name="company_id" groups="base.group_no_one" />
