[ADD] Added more improvements about i18n for the l10n_ve_config_account module

--- a/l10n_ve_config_account/views/sale_order_views.xml
+++ b/l10n_ve_config_account/views/sale_order_views.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
+    <!-- sale.order form view -->
     <record id="view_order_form" model="ir.ui.view">
         <field name="name">sale.order.form</field>
         <field name="model">sale.order</field>
