--- a/l10n_ve_config_account/views/account_ut_views.xml
+++ b/l10n_ve_config_account/views/account_ut_views.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
+    <!-- account.ut tree view -->
     <record id="account_ut_view_tree" model="ir.ui.view">
         <field name="name">account.ut.view.tree</field>
         <field name="model">account.ut</field>
@@ -11,14 +12,16 @@
             </tree>
         </field>
     </record>
+    <!-- account.ut action window -->
     <record id="action_account_ut" model="ir.actions.act_window">
-        <field name="name">Unidad tributaria</field>
+        <field name="name">Tax unit</field>
         <field name="res_model">account.ut</field>
         <field name="view_mode">tree</field>
         <field name="help">
-            Unidad tributaria de acuerdo al SENIAT
+            Tax unit according to SENIAT
         </field>
     </record>
+    <!-- account.ut menu item -->
     <menuitem
         id="menu_action_account_ut"
         parent="menu_l10n_ve_finance_configuration"
