--- a/l10n_ve_config_account/views/res_config_settings_views.xml
+++ b/l10n_ve_config_account/views/res_config_settings_views.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
+    <!-- res.config.settings form view -->
     <record id="res_config_settings_view_form" model="ir.ui.view">
         <field name="name">res.config.settings.view.form</field>
         <field name="model">res.config.settings</field>
@@ -9,11 +10,11 @@
             <xpath expr="//div[hasclass('settings')]" position="inside">
                 <div
                     class="app_settings_block"
-                    string="Localización contable"
-                    data-string="Localización contable"
+                    string="Accounting localization"
+                    data-string="Accounting localization"
                     data-key="l10n_ve_config_account"
                 >
-                    <h2>Sistema de conversión</h2>
+                    <h2>Conversion system</h2>
                     <div
                         class="row mt16 o_settings_container"
                         name="main_currency_setting_container"
@@ -23,10 +24,10 @@
                             id="l10n_ve_main_currency"
                         >
                             <div class="o_setting_right_pane">
-                                <span class="o_form_label">Moneda funcional</span>
+                                <span class="o_form_label">Functional currency</span>
                                 <div
                                     class="text-muted"
-                                >Moneda principal de tu compañía</div>
+                                >Main currency of your company</div>
                                 <div class="row mt16">
                                     <label
                                         for="currency_id"
@@ -45,14 +46,14 @@
                             id="l10n_ve_referencial_currency"
                         >
                             <div class="o_setting_right_pane">
-                                <span class="o_form_label">Moneda operativa</span>
+                                <span class="o_form_label">Operating currency</span>
                                 <div
                                     class="text-muted"
-                                >Representa los importes monetarios en una moneda secundaria.</div>
+                                >Represents monetary amounts in a secondary currency.</div>
                                 <div class="row mt16">
                                     <label
                                         for="currency_ref_id"
-                                        string="Moneda"
+                                        string="Currency"
                                         class="col-lg-3 o_light_label"
                                     />
                                     <field
@@ -68,15 +69,15 @@
                             id="l10n_ve_referencial_currency"
                         >
                             <div class="o_setting_right_pane">
-                                <span class="o_form_label">Moneda fiscal</span>
+                                <span class="o_form_label">Fiscal currency</span>
                                 <div class="text-muted">
-                                    Controlar la gestión de los reportes que por materia fiscal requieren ser generados
-                                    en una moneda independientemente de la configuración funcional del sistema.
+                                    Control the management of reports that, due to fiscal matters, need to be generated
+                                    in a currency regardless of the functional configuration of the system.
                                 </div>
                                 <div class="row mt16">
                                     <label
                                         for="fiscal_currency_id"
-                                        string="Moneda"
+                                        string="Currency"
                                         class="col-lg-3 o_light_label"
                                     />
                                     <field
