--- a/l10n_ve_config_withholding/views/res_config_settings_views.xml
+++ b/l10n_ve_config_withholding/views/res_config_settings_views.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
+    <!-- res.config.settings form view -->
     <record id="res_config_settings_view_form" model="ir.ui.view">
         <field name="name">res.config.settings.view.form</field>
         <field name="model">res.config.settings</field>
@@ -13,7 +14,7 @@
                 expr="//div[@name='main_currency_setting_container']"
                 position="after"
             >
-                <h2>Retenciones</h2>
+                <h2>Withholdings</h2>
                 <div
                     class="row mt16 o_settings_container"
                     id="main_withholding_setting_container"
@@ -22,10 +23,10 @@
                         <div class="o_setting_right_pane">
                             <span
                                 class="o_form_label"
-                            >Firma y sello de la compañía</span>
+                            >Signature and seal of the company</span>
                             <div
                                 class="text-muted"
-                            >Firma y sello digital utilizado para comprobantes de retención.</div>
+                            >Digital signature and seal used for withholding receipts.</div>
                             <div class="row mt16">
                                 <label for="sign_512" class="col-lg-4 o_light_label" />
                                 <field
