[ADD] Added more improvements about the i18n support for the l10n_ve_withholding_igtf module

--- a/l10n_ve_withholding_igtf/wizard/account_payment_register.xml
+++ b/l10n_ve_withholding_igtf/wizard/account_payment_register.xml
@@ -18,7 +18,7 @@
                     >(= <field
                             name="igtf_amount"
                             class="oe_inline"
-                        /> importe IGTF)</span>
+                        /> IGTF amount)</span>
                 </div>
                 <field
                     name="igtf_journal_id"
