--- a/l10n_ve_withholding_igtf/views/account_payment.xml
+++ b/l10n_ve_withholding_igtf/views/account_payment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
+    <!-- account.payment form view -->
     <record id="view_account_payment_form" model="ir.ui.view">
         <field name="name">account.payment.form</field>
         <field name="model">account.payment</field>
@@ -15,7 +16,7 @@
                     attrs="{'invisible': ['|', ('igtf_move_id', '=', False), ('state', '!=', 'posted')]}"
                 >
                     <div class="o_stat_info">
-                        <span class="o_stat_text">Asiento IGTF</span>
+                        <span class="o_stat_text">IGTF Entry</span>
                     </div>
                 </button>
             </xpath>
@@ -32,7 +33,7 @@
                     >(= <field
                             name="igtf_amount"
                             class="oe_inline"
-                        /> importe IGTF)</span>
+                        /> IGTF amount)</span>
                 </div>
                 <field
                     name="igtf_journal_id"
