--- a/l10n_ve_withholding_igtf/views/res_config_settings_views.xml
+++ b/l10n_ve_withholding_igtf/views/res_config_settings_views.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
+    <!-- res.config.settings form view -->
     <record id="res_config_settings_view_form" model="ir.ui.view">
         <field name="name">res.config.settings.view.form</field>
         <field name="model">res.config.settings</field>
