--- a/l10n_ve_withholding_igtf/views/res_partner_views.xml
+++ b/l10n_ve_withholding_igtf/views/res_partner_views.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
+    <!-- res.partner form view -->
     <record id="view_partner_form" model="ir.ui.view">
         <field name="name">view.partner.form</field>
         <field name="model">res.partner</field>
