[ADD] Added more improvements about the i18n support for the l10n_ve_withholding_islr module

--- a/l10n_ve_withholding_islr/report/account_withholding_islr_report.xml
+++ b/l10n_ve_withholding_islr/report/account_withholding_islr_report.xml
@@ -17,22 +17,22 @@
                             <div class="col-9">
                                 <div class="row py-4">
                                     <div class="col-6 text-center"><h4
-                                        >Comprobante de Retención de ISLR</h4></div>
+                                        >Proof of ISLR Withholding</h4></div>
                                     <div class="col-6 text-end pr-0"><p
                                             style="font-size: 11px;"
                                         >
-                                        Para dar cumplimiento con la normativa establecida el Artículo 24, Decreto 1.808<br
+                                        To comply with the regulations established in Article 24, Decree 1.808<br
                                             />
-                                        en materia de Retenciones ISLR publicado en G.O. N° 36.203 del 12 de Mayo de 1997
+                                        on ISLR Withholdings published in G.O. No. 36,203 of May 12, 1997
                                     </p></div>
                                 </div>
                                 <div class="row text-end mt-4">
                                     <div class="col-6 pe-1 border"><b
-                                        >Nro. Comprobante:</b> <span
+                                        >Receipt No.:</b> <span
                                             t-field="doc.name"
                                         /></div>
                                     <div class="col-6 pe-1 border"><b
-                                        >Fecha de emisión:</b> <span
+                                        >Release date:</b> <span
                                             t-field="doc.date"
                                         /></div>
                                 </div>
@@ -44,33 +44,33 @@
                         >
                             <tr>
                                 <td
-                                >Nombre y Apellido o Razón Social del Agente de Retención:<br
+                                >Name and Surname or Business Name of the Withholding Agent:<br
                                     /><span t-field="doc.agent_id" /></td>
                                 <td
-                                >Registro de Identificación Fiscal del Agente de Retención<br
+                                >Tax Identification Record of the Withholding Agent<br
                                     /><span t-field="doc.agent_id.vat" /></td>
-                                <td style="width:20%;">Período Fiscal<br /><span
+                                <td style="width:20%;">Fiscal Period<br /><span
                                         t-esc="doc.date.strftime('%m/%Y')"
                                     /></td>
                             </tr>
                             <tr>
                                 <td
                                     colspan="3"
-                                >Dirección Fiscal del Agente de Retención:<br /><span
+                                >Tax Address of the Withholding Agent:<br /><span
                                         t-esc="doc.agent_id._display_address(without_company=True)"
                                     /></td>
                             </tr>
                             <tr>
                                 <td
-                                >Nombre y Apellido o Razón Social del Agente Retenido:<br
+                                >Name and Surname or Business Name of the Retained Agent:<br
                                     /><span t-field="doc.subject_id" /></td>
                                 <td
                                     colspan="2"
-                                >Registro de Identificación Fiscal del Agente Retenido<br
+                                >Tax Identification Record of the Retained Agent<br
                                     /><span t-field="doc.subject_id.vat" /></td>
                             </tr>
                             <tr>
-                                <td colspan="3">Dirección Fiscal del Agente Retenido:<br
+                                <td colspan="3">Tax Address of the Retained Agent:<br
                                     /><span
                                         t-esc="doc.subject_id._display_address(without_company=True)"
                                     /></td>
@@ -81,18 +81,18 @@
                             style="font-size: 13px;"
                         >
                             <tr style="background-color:#A9F5F2;">
-                                <th>Fecha de documento</th>
-                                <th>Nro. Factura</th>
-                                <th>Nro. Control</th>
-                                <th>Nro. Nota de débito</th>
-                                <th>Nro. Nota de crédito</th>
-                                <th>Nro. Factura afectada</th>
-                                <th>Concepto</th>
-                                <th>Monto total del documento</th>
-                                <th>Base imponible</th>
-                                <th>% de Retencion</th>
-                                <th>Sustraendo</th>
-                                <th>Impuesto retenido</th>
+                                <th>Document date</th>
+                                <th>Invoice No.</th>
+                                <th>Control No. </th>
+                                <th>Debit note No.</th>
+                                <th>Credit note No.</th>
+                                <th>Affected Invoice No.</th>
+                                <th>Concept</th>
+                                <th>Total amount of the document</th>
+                                <th>Taxable base</th>
+                                <th>% of Retention</th>
+                                <th>Subtrahend</th>
+                                <th>Tax withheld</th>
                             </tr>
                             <tr t-foreach="doc.line_ids" t-as="line">
                                 <td><span t-field="doc.invoice_date" /></td>
@@ -163,7 +163,7 @@
                                     style="width: 50%;"
                                 />
                                 <span t-field="doc.agent_id" /><br />
-                                Agente de Retención (Sello y Firma)
+                                Withholding Agent (Stamp and Signature)
                             </div>
                             <div class="col-6">
                                 <div style="height: 100px;">
@@ -178,7 +178,7 @@
                                     style="width: 50%;"
                                 />
                                 <span t-field="doc.subject_id" /><br />
-                                Firma del Beneficiario
+                                Signature of the Beneficiary
                             </div>
                         </div>
                     </div>
@@ -187,7 +187,7 @@
         </t>
     </template>
     <record id="account_withholding_islr_report" model="ir.actions.report">
-        <field name="name">Comprobante de ISLR</field>
+        <field name="name">Proof of ISLR</field>
         <field name="model">account.withholding.islr</field>
         <field name="report_type">qweb-pdf</field>
         <field
@@ -196,7 +196,7 @@
         <field
             name="report_file"
         >l10n_ve_withholding_islr.account_withholding_islr</field>
-        <field name="print_report_name">'COMP ISLR - %s' % (object.name)</field>
+        <field name="print_report_name">'ISLR Voucher - %s' % (object.name)</field>
         <field name="binding_model_id" ref="model_account_withholding_islr" />
         <field
             name="paperformat_id"
