--- a/l10n_ve_withholding_islr/views/account_withholding_islr.xml
+++ b/l10n_ve_withholding_islr/views/account_withholding_islr.xml
@@ -1,5 +1,6 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <odoo>
+    <!-- account.withholding.islr tree view -->
     <record id="account_withholding_islr_view_tree" model="ir.ui.view">
         <field name="name">account.withholding.islr.view.tree</field>
         <field name="model">account.withholding.islr</field>
@@ -18,6 +19,8 @@
             </tree>
         </field>
     </record>
+
+    <!-- account.withholding.islr form view -->
     <record id="account_withholding_islr_view_form" model="ir.ui.view">
         <field name="name">account.withholding.islr.view.form</field>
         <field name="model">account.withholding.islr</field>
@@ -29,25 +32,25 @@
                         states="draft"
                         type="object"
                         class="oe_highlight"
-                        string="Confirmar"
+                        string="Confirm"
                     />
                     <button
                         name="button_send_mail"
                         states="posted"
                         type="object"
-                        string="Enviar por correo electrónico"
+                        string="Send by email"
                     />
                     <button
                         name="button_draft"
                         states="posted"
                         type="object"
-                        string="Restablecer a borrador"
+                        string="Reset to draft"
                     />
                     <button
                         name="button_cancel"
                         states="draft,posted"
                         type="object"
-                        string="Cancelar"
+                        string="Cancel"
                     />
                     <field
                         name="state"
@@ -66,14 +69,14 @@
                             attrs="{'invisible': ['|', ('state', '!=', 'posted'), ('move_id', '=', False)]}"
                         >
                             <div class="o_stat_info">
-                                <span class="o_stat_text">Asiento</span>
+                                <span class="o_stat_text">Entry</span>
                             </div>
                         </button>
                     </div>
                     <field name="xml_state" invisible="1" />
                     <widget
                         name="web_ribbon"
-                        title="Declarada"
+                        title="Declared"
                         attrs="{'invisible': [('xml_state', '!=', 'posted')]}"
                     />
                     <div class="oe_title">
@@ -103,7 +106,7 @@
                         </group>
                     </group>
                     <notebook>
-                        <page string="Lineas">
+                        <page string="Lines">
                             <field name="line_ids">
                                 <tree>
                                     <field name="currency_id" invisible="1" />
@@ -128,25 +131,33 @@
             </form>
         </field>
     </record>
+
+    <!-- account.withholding.islr customer action window -->
     <record id="account_withholding_islr_customer_action" model="ir.actions.act_window">
-        <field name="name">Retención de ISLR Clientes</field>
+        <field name="name">Customers ISLR withholding</field>
         <field name="res_model">account.withholding.islr</field>
         <field name="view_mode">tree,form</field>
         <field name="domain">[('type', '=', 'customer')]</field>
         <field name="context">{'default_type': 'customer'}</field>
     </record>
+
+    <!-- account.withholding.islr provider action window -->
     <record id="account_withholding_islr_supplier_action" model="ir.actions.act_window">
-        <field name="name">Retención de ISLR Proveedores</field>
+        <field name="name">Providers ISLR Withholding</field>
         <field name="res_model">account.withholding.islr</field>
         <field name="view_mode">tree,form</field>
         <field name="domain">[('type', '=', 'supplier')]</field>
         <field name="context">{'default_type': 'supplier'}</field>
     </record>
+
+    <!-- account.withholding.islr customer menu items -->
     <menuitem
         id="menu_account_withholding_islr_customer"
         action="account_withholding_islr_customer_action"
         parent="account.menu_finance_receivables"
     />
+
+    <!-- account.withholding.islr provider menu items -->
     <menuitem
         id="menu_account_withholding_islr_supplier"
         action="account_withholding_islr_supplier_action"
