--- a/l10n_ve_withholding_islr/views/product_template.xml
+++ b/l10n_ve_withholding_islr/views/product_template.xml
@@ -1,5 +1,6 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <odoo>
+    <!-- product.template form view -->
     <record id="product_template_form_view" model="ir.ui.view">
         <field name="name">product.product.form</field>
         <field name="model">product.template</field>
@@ -7,10 +8,10 @@
         <field name="arch" type="xml">
             <xpath expr="//notebook" position="inside">
                 <page
-                    string="Retención ISLR"
+                    string="ISLR withholding"
                     attrs="{'invisible':[('type', '!=', 'service')]}"
                 >
-                    <group string="Concepto de retención de ingresos">
+                    <group string="Revenue retention concept">
                         <field name="apply_withholding_islr" />
                         <field
                             name="islr_concept_id"
