--- a/l10n_ve_withholding_islr/views/res_partner_views.xml
+++ b/l10n_ve_withholding_islr/views/res_partner_views.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
+    <!-- res.partner form view -->
     <record id="view_partner_form" model="ir.ui.view">
         <field name="name">view.partner.form</field>
         <field name="model">res.partner</field>
         <field name="inherit_id" ref="l10n_ve_config_withholding.view_partner_form" />
         <field name="arch" type="xml">
             <group name="withholding" position="inside">
-                <group name="withholding_islr" string="Retenciones de ISLR">
+                <group name="withholding_islr" string="ISLR withholdings">
                     <field
                         name="is_islr_agent"
                         attrs="{'invisible': [('partner_type', 'not in', ('customer', 'customer_supplier'))]}"
